--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -4,3 +4,16 @@
 * {
     font-family: "Inter", sans-serif; /* Inter é a fonte padrao da plataforma */ 
 }
+
+:root {
+    --navbar-color: #424242; 
+  }
+  
+  .navbar {
+    background-color: var(--navbar-color);
+  }
+  
+  .sidebar {
+    background-color: var(--navbar-color);
+  }
+  
